--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,18 +6,19 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="prompt_account">邮箱</string>
+    <string name="prompt_account">邮箱/用户名</string>
     <string name="prompt_password">密码</string>
-    <string name="nickname">昵称</string>
+    <string name="username">用户名</string>
     <string name="re_password">确认密码</string>
-    <string name="action_login">登录</string>
+    <string name="login">登录</string>
     <string name="register_account">注册账号</string>
     <string name="register">注册</string>
     <string name="forget_password">忘记密码</string>
-    <string name="error_invalid_account">账号格式错误</string>
+    <string name="error_invalid_email">邮箱格式错误</string>
     <string name="error_invalid_password">密码长度至少6位</string>
     <string name="error_same_password">密码不一致</string>
     <string name="error_field_required">必填项</string>
     <string name="login_fail">登录失败，请仔细检查账号密码</string>
-    <string name="register_fail">注册失败，此邮箱已注册</string>
+    <string name="already_email">此邮箱已注册</string>
+    <string name="already_username">此用户名已注册</string>
 </resources>
