--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,10 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="prompt_account">邮箱/用户名</string>
-    <string name="prompt_password">密码</string>
+    <string name="account">用户名／邮箱</string>
+    <string name="password">密码</string>
     <string name="username">用户名</string>
+    <string name="email">邮箱</string>
     <string name="re_password">确认密码</string>
     <string name="login">登录</string>
     <string name="register_account">注册账号</string>
@@ -21,4 +22,7 @@
     <string name="login_fail">登录失败，请仔细检查账号密码</string>
     <string name="already_email">此邮箱已注册</string>
     <string name="already_username">此用户名已注册</string>
+    <string name="no_username">用户名不存在</string>
+    <string name="error_password">密码错误</string>
+    <string name="reset_password">重置密码</string>
 </resources>
