--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
     <string name="reset_password">重置密码</string>
     <string name="userinfo_overdue">用户信息过期，请重新登录</string>
     <string name="logout">退出当前帐号</string>
+    <string name="submit">提交</string>
+    <string name="error_head_replace">头像上传失败</string>
+    <string name="share_app_text">推荐下载“拍拍乐”手机客户端，提供高质量的英语学习体验，以新颖独特的AR交互模式提升学习兴趣。http://www.wandoujia.com/apps/com.indoor.im</string>
 </resources>
