1、实现词库界面的主要布局； 2、下拉刷新的控件添加； 3、离线下载放到设置中

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,8 @@
     <string name="feedback_content_hint">请详细描述你的问题</string>
     <string name="in_feedback_content">请输入反馈内容</string>
     <string name="success_feedback">你的反馈已提交，我们将尽快处理</string>
+    <string name="download_dictionary">离线词库</string>
+    <string name="animal_dictionary">动物</string>
+    <string name="fruits_dictionary">水果</string>
+    <string name="vegetable_dictionary">蔬菜</string>
 </resources>
