--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="vegetables">vegetables</string>
     <string name="share_activity_text">我在用“拍拍乐”学习英语，有趣好玩的AR交互模式，你还在等什么，快来体验吧！</string>
     <string name="URL">http://www.wanpeng.com/</string>
+    <string name="refresh">刷新</string>
 </resources>
