移除本地视频，减小APK体积

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="logout">退出当前帐号</string>
     <string name="submit">提交</string>
     <string name="error_head_replace">头像上传失败</string>
-    <string name="share_app_text">推荐下载“拍拍乐”手机客户端，提供高质量的英语学习体验，以新颖独特的AR交互模式提升学习兴趣。http://www.wanpeng.com/</string>
+    <string name="share_app_text">推荐下载“拍拍乐”手机客户端，提供高质量的英语学习体验，以新颖独特的AR交互模式提升学习兴趣。http://http://www.gardenofvisual.com/</string>
     <string name="pronunciation">发音</string>
     <string name="change_password">修改密码</string>
     <string name="error_network">网络错误</string>
@@ -67,7 +67,7 @@
     <string name="fruits">fruits</string>
     <string name="vegetables">vegetables</string>
     <string name="share_activity_text">我在用“拍拍乐”学习英语，有趣好玩的AR交互模式，你还在等什么，快来体验吧！</string>
-    <string name="URL">http://www.wanpeng.com/</string>
+    <string name="URL">http://http://www.gardenofvisual.com/</string>
     <string name="refresh">刷新</string>
     <string name="today_tip">请完成今日任务(至少学习10单词)</string>
     <string name="reward_tip">今日奖励还未出炉，请稍候再试</string>
