--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_thesaurus">词库</string>
     <string name="title_rateoflearning">学习进度</string>
     <string name="title_setting">设置</string>
+    <string name="title_test">测试</string>
     <string name="feedback">意见反馈</string>
     <string name="title_communication">交流与联系</string>
     <string name="title_share_app">分享应用</string>
@@ -71,4 +72,5 @@
     <string name="refresh">刷新</string>
     <string name="today_tip">请完成今日任务(至少学习10单词)</string>
     <string name="reward_tip">今日奖励还未出炉，请稍候再试</string>
+    <string name="next">下一题</string>
 </resources>
