1、添加更多的奖励视频与对应识别图； 2、替换发音文件； 3、只有完成任务才奖励视频功能java方面完成，还差c方面； 4、优化设置界面与词库界面退出效果。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="today_tip">请完成今日任务(至少学习10单词)</string>
     <string name="reward_tip">今日奖励还未出炉，请稍候再试</string>
     <string name="next">下一题</string>
+    <string name="unlock_today_card">卡片已解锁(•̀ᴗ•́)\n快去观看动画吧</string>
 </resources>
